<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="in_game_preferences"
        android:title="@string/in_game_preferences_title">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="gamespace_stay_awake"
            android:title="@string/stay_awake_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="gamespace_auto_brightness_disabled"
            android:title="@string/auto_brightness_disabled_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="gamespace_tfgesture_disabled"
            android:title="@string/three_screenshot_disabled_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="gamespace_adb_disabled"
            android:title="@string/adb_disabled_title" />

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/ringer_mode_entries"
            android:entryValues="@array/ringer_mode_values"
            android:key="gamespace_ringer_mode"  <!-- Fixed key -->
            android:summary="%s"
            android:title="@string/ringer_mode_title" />
    </PreferenceCategory>

</PreferenceScreen>
